Fixed overlapping elements

--- a/index.css
+++ b/index.css
@@ -67,7 +67,7 @@ nav ul li a {
     margin: 0;
 }
 .portfolio{
-    padding: 0rem 15rem;
+    padding: 0rem;
 }
 .portfolio ul{
     border-top: 1px solid black;
